# ISACLE

./: .ghci  .gitignore  ADJUSTMENTS.md  DEFINITIONS.md  PLAN_16BIT_PACKING.md  PLAN_ALIGNMENT.md  PLAN_BUS_TYPES.md  PLAN_CODE_BUS_READS.md  PLAN_CORE_REFRAME.md  PLAN_FUNCTIONAL_CORES.md  PLAN_IR_MIGRATION.md  PLAN_TYPED_HDL.md  README.md  RUNNING.md  isacle.cabal
examples/: GpioUart.hs  TinySoc.hs  TinySocTH.hs
src/: Isacle.hs
src-hdl/Hdl/: Arith.hs  Bits.hs  Class.hs  Entity.hs  IO.hs  Monad.hs  Net.hs  Prim.hs  Reduce.hs  Sig.hs  Sim.hs  Types.hs
src-hdl/Hdl/Emit/: Vhdl.hs
src-hdl/Isacle/Hdl/: Class.hs  Net.hs  Prim.hs  Types.hs
src-hdl/Isacle/Hdl/Emit/: Vhdl.hs
src/Core/: ALU.hs
src/Core/Harvard/: Pipeline.hs
src/Isacle/: ALU.hs  Bus.hs  Decode.hs  ISA.hs  Layout.hs  Memory.hs  System.hs  TH.hs
src/Isacle/CPU/: Dummy.hs
src/Isacle/Cache/: Config.hs  L1.hs
src/Isacle/Harvard/: CPU.hs  ISA.hs  Pipeline.hs
src/Isacle/ISA/: ALU.hs  Build.hs  CPUDef.hs  Chip.hs  Def.hs  Encoding.hs  EncodingDSL.hs  IR.hs  Types.hs  VonNeumann.hs  WidthCheck.hs
src/Isacle/ISA/Backend/: Doc.hs  Lower.hs  Sim.hs  Synth.hs  SynthCPU.hs  SynthVnCPU.hs  Wire.hs
src/Isacle/ISA/Example/: AVR.hs  Tiny.hs  TinyVN.hs
src/Isacle/Periph/: DMA.hs  GPIO.hs  Interrupt.hs  InterruptController.hs  Ramp.hs  Timer.hs  UART.hs
src/Isacle/System/: Bus.hs  BusArch.hs  BusCap.hs  BusDef.hs  BusHandle.hs  CLI.hs  Emit.hs  Generate.hs  HdlCircuit.hs  HdlSystem.hs  Layout.hs  MemBanks.hs  Periph.hs  Reduce.hs  Rom.hs  SystemDSL.hs
tests/: HdlExamples.hs  TestDSL.hs  TestHdl.hs  TestHdlExtended.hs  TestHdlSystem.hs  TestIRLower.hs  TestTinyCPU.hs  TestTinyRun.hs  TestTinySys.hs  TestTinyVN.hs  unittests.hs
tests/Tests/Isacle/: GPIO.hs  HdlTypes.hs  Layout.hs  Sim.hs
tests/Tests/Isacle/Harvard/: ISA.hs  Pipeline.hs
tests/Tests/Isacle/ISA/: WidthCheck.hs
tests/Tests/Isacle/Periph/: DMA.hs  PE2.hs  Timer.hs  UART.hs
tests/Tests/Isacle/System/: Bus.hs  Layout.hs
tests/ghdl/: sim.sh  tiny_sys_tb.vhd
