cabal-version:       3.0
name:                isacle
version:             0.1
license:             MIT
synopsis:            ISA-Agnostic Core Logic Environment — Clash-free HDL meta-compiler
description:         System-level SoC DSL and peripheral register framework built on the isacle-hdl NetNode IR.
category:            Hardware
author:              Jonathan Fraser <jonathanfras@gmail.com>
maintainer:          Jonathan Fraser <jonathanfras@gmail.com>
build-type:          Simple

common common-options
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    MultiParamTypeClasses
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    AllowAmbiguousTypes
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
  build-depends:
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    transformers >= 0.5

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    isacle-hdl,
    mtl >= 2.2,
    filepath >= 1.4,
    template-haskell >= 2.16,
    bytestring >= 0.10
  exposed-modules:
    Isacle
    Isacle.ALU
    Isacle.Bus
    Isacle.Decode
    Isacle.Harvard
    Isacle.Harvard.ISA
    Isacle.Harvard.CPU
    Isacle.Harvard.Pipeline
    Isacle.Memory
    Isacle.TH
    Isacle.CPU.Dummy
    Isacle.Periph.DMA
    Isacle.Periph.GPIO
    Isacle.Periph.Interrupt
    Isacle.Periph.Timer
    Isacle.Periph.UART
    Isacle.System
    Isacle.System.Spec
    Isacle.System.Periph
    Isacle.System.BusDef
    Isacle.System.BusArch
    Isacle.System.HdlCircuit
    Isacle.System.HdlSystem
    Isacle.System.SystemDSL
    Isacle.System.Generate
    Isacle.ISA
    Isacle.ISA.Types
    Isacle.ISA.CPUDef
    Isacle.ISA.ALU
    Isacle.ISA.Def
    Isacle.ISA.Example.AVR
    Isacle.ISA.Example.Tiny
    Isacle.ISA.Encoding
    Isacle.ISA.Backend.Doc
    Isacle.ISA.Backend.Sim
    Isacle.ISA.Backend.Synth
    Isacle.ISA.Backend.SynthCPU
  default-language: Haskell2010

library isacle-hdl
  visibility: public
  default-language: Haskell2010
  hs-source-dirs: src-hdl
  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    TemplateHaskell
  ghc-options: -Wall -Wcompat
  exposed-modules:
    Hdl.Net
    Hdl.Types
    Hdl.Prim
    Hdl.Bits
    Hdl.Class
    Hdl.Entity
    Hdl.Emit.Vhdl
  build-depends:
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    filepath >= 1.4,
    text >= 1.2,
    mtl >= 2.2,
    transformers >= 0.5,
    template-haskell >= 2.16

executable unittests
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: unittests.hs
  other-modules:
    Tests.Isacle.Harvard.ISA
    Tests.Isacle.Harvard.Pipeline
    Tests.Isacle.GPIO
    Tests.Isacle.Periph.Timer
    Tests.Isacle.Periph.UART
    Tests.Isacle.Periph.DMA
    Tests.Isacle.System.Bus
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    isacle-hdl

executable test-dsl
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestDSL.hs
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    isacle-hdl

executable test-hdl-system
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestHdlSystem.hs
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    isacle-hdl

executable test-tiny-cpu
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestTinyCPU.hs
  build-depends:
    base >= 4.12 && < 4.22,
    directory >= 1.3,
    isacle,
    isacle-hdl

executable test-hdl
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestHdl.hs
  default-extensions:
    DataKinds
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    RecursiveDo
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  ghc-options: -Wall -Wcompat
  build-depends:
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    isacle-hdl

executable test-hdl-extended
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestHdlExtended.hs
  default-extensions:
    DataKinds
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    NumericUnderscores
    RecursiveDo
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  ghc-options: -Wall -Wcompat
  build-depends:
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    isacle-hdl

executable hdl-examples
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: HdlExamples.hs
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    NumericUnderscores
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  ghc-options: -Wall -Wcompat
  build-depends:
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    isacle-hdl
