cabal-version:       3.0
name:                isacle
version:             0.1
license:             MIT
synopsis:            ISA-Agnostic Core Logic Environment — Clash-free HDL meta-compiler
description:         System-level SoC DSL and peripheral register framework built on the isacle-hdl NetNode IR.
category:            Hardware
author:              Jonathan Fraser <jonathanfras@gmail.com>
maintainer:          Jonathan Fraser <jonathanfras@gmail.com>
build-type:          Simple

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    MultiParamTypeClasses
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    AllowAmbiguousTypes
    ExistentialQuantification
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    TemplateHaskell
    QuasiQuotes
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
  build-depends:
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    transformers >= 0.5

-- ---------------------------------------------------------------------------
-- isacle-hdl: Clash-free NetNode IR and bit-vector types
-- ---------------------------------------------------------------------------

library isacle-hdl
  import: common-options
  visibility: public
  hs-source-dirs: src-hdl
  exposed-modules:
    Hdl.Arith
    Hdl.Bits
    Hdl.Class
    Hdl.Emit.Vhdl
    Hdl.Entity
    Hdl.Net
    Hdl.Prim
    Hdl.Reduce
    Hdl.Types
  build-depends:
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    filepath >= 1.4,
    mtl >= 2.2
  default-language: Haskell2010

-- ---------------------------------------------------------------------------
-- isacle: ISA framework, peripheral DSL, system builder
-- ---------------------------------------------------------------------------

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Isacle
    Isacle.ALU
    Isacle.Bus
    Isacle.CPU.Dummy
    Isacle.Decode
    Isacle.Harvard
    Isacle.Harvard.CPU
    Isacle.Harvard.ISA
    Isacle.Harvard.Pipeline
    Isacle.ISA
    Isacle.ISA.ALU
    Isacle.ISA.Backend.Doc
    Isacle.ISA.Backend.Lower
    Isacle.ISA.Backend.Sim
    Isacle.ISA.Backend.Synth
    Isacle.ISA.Backend.SynthCPU
    Isacle.ISA.Backend.SynthVnCPU
    Isacle.ISA.CPUDef
    Isacle.ISA.Def
    Isacle.ISA.Encoding
    Isacle.ISA.IR
    Isacle.ISA.Build
    Isacle.ISA.Example.AVR
    Isacle.ISA.Example.Tiny
    Isacle.ISA.Example.TinyVN
    Isacle.ISA.Types
    Isacle.ISA.VonNeumann
    Isacle.Cache.Config
    Isacle.Cache.L1
    Isacle.Memory
    Isacle.Periph.DMA
    Isacle.Periph.GPIO
    Isacle.Periph.Interrupt
    Isacle.Periph.Timer
    Isacle.Periph.UART
    Isacle.System
    Isacle.System.BusArch
    Isacle.System.BusDef
    Isacle.System.BusHandle
    Isacle.System.Generate
    Isacle.System.HdlCircuit
    Isacle.System.Periph
    Isacle.System.Spec
    Isacle.System.SystemDSL
    Isacle.TH
  build-depends:
    isacle:isacle-hdl,
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    mtl >= 2.2,
    filepath >= 1.4,
    template-haskell >= 2.16,
    bytestring,
    transformers >= 0.5
  default-language: Haskell2010

-- ---------------------------------------------------------------------------
-- Test executables
-- ---------------------------------------------------------------------------

executable test-tiny-vn
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestTinyVN.hs
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    isacle:isacle-hdl

executable test-tiny-cpu
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestTinyCPU.hs
  build-depends:
    base >= 4.12 && < 4.22,
    directory,
    isacle,
    isacle:isacle-hdl

executable test-tiny-run
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestTinyRun.hs
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    isacle:isacle-hdl

executable test-ir-lower
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestIRLower.hs
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    isacle:isacle-hdl

executable test-tiny-sys
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestTinySys.hs
  build-depends:
    base >= 4.12 && < 4.22,
    directory,
    isacle,
    isacle:isacle-hdl

executable test-hdl-system
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestHdlSystem.hs
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    isacle:isacle-hdl

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Tests.Isacle.Harvard.ISA
    Tests.Isacle.Harvard.Pipeline
    Tests.Isacle.GPIO
    Tests.Isacle.Periph.Timer
    Tests.Isacle.Periph.UART
    Tests.Isacle.Periph.DMA
    Tests.Isacle.System.Bus
  build-depends:
    base >= 4.12 && < 4.22,
    containers >= 0.6,
    isacle,
    isacle:isacle-hdl,
    hedgehog,
    tasty >= 1.2 && < 1.6,
    tasty-hedgehog,
    tasty-th
